# Redis-Encapsulation-Library

./: .gitmodules  CMakeLists.txt  README.md  config.ini
include/config/: config.hpp
include/redis/: RedisContextRAII.hpp  RedisReplyRAII.hpp  RedisTools.hpp
include/tools/: tools.hpp
src/: RedisContextRAII.cpp  RedisManager.cpp
